<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/heroNameET"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:hint="@string/hero_name_hint"/>

    <TextView
        android:id="@+id/firstPowerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/first_power_textview"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/firstPowerSpinner"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:id="@+id/secondPowerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/second_power_textview"
        android:textSize="24sp"/>

    <Spinner
        android:id="@+id/secondPowerSpinner"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Spinner>

    <Button
        android:id="@+id/submitHeroButton"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_hero_button"/>

</LinearLayout>