<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itp341.zhao.glarence.a9.MainBattle">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rankings_textview"
                android:textSize="24sp"/>

            <ListView
                android:id="@+id/rankingsLV"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"></ListView>

            <Button
                android:id="@+id/addHeroButton"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/add_hero_button"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battle_textview"
                android:textSize="24sp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/first_hero_textview"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/heroFirstSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/second_hero_textview"
                        android:textSize="18sp"/>

                    <Spinner
                        android:id="@+id/heroSecondSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"></Spinner>
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/fightButton"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/fight_button_string"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_textview"
                android:textSize="24sp"/>

            <ScrollView
                android:id="@+id/resultsSV"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:id="@+id/resultsTV"
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </ScrollView>

        </LinearLayout>

    </ScrollView>
</LinearLayout>
